--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,14 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.rfid.util</groupId>
+            <artifactId>com.rfid.util</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/RFID.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
@@ -111,6 +119,17 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <!--引入本地资源-->
+        <resources>
+            <resource>
+                <directory>lib</directory>
+                <targetPath>BOOT-INF/lib/</targetPath>
+                <includes>
+                    <include>**/*.jar</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
 </project>
